--- a/css/styles.css
+++ b/css/styles.css
@@ -3748,7 +3748,7 @@ textarea.form-control-lg {
   --bs-navbar-toggler-border-radius: 0.5rem;
   --bs-navbar-toggler-focus-width: 0.25rem;
   --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
-  position: relative;
+  position: rfixed;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -11058,7 +11058,7 @@ html::before {
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #2c3e50;
+  background-color: rgba(0, 0, 0, 0.5); /* Black with 50% transparency */
   color: #fff;
 }
 
